# hosslib

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
dox/: supported-hardware.hpp
include/: hosslib.hpp
include/instruments/: bus_pirate.hpp
include/net/: serial_port.hpp
include/os/: environment.hpp
src/: environment.cpp
src/posix/: backtrace_handler.cpp  libinit.cpp
tgz/: .gitignore
unittests/: buspirate.cpp  comserial.cpp  cppunit-test-main.cpp  launch.cpp  test-environment.cpp  test-environment.h
